<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Android Trivia </string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d). Score: %3$d. </string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reglas">Rules</string>
    <string name="acerca_de">About</string>
    <string name="Nivel">Level</string>
    <string name="debes_selec_nivel">"You must select a level."</string>
    <string name="seleccion_nivel">Select a level:</string>
    <string name="cancelar">Cancel</string>
    <string name="aceptar">Accept</string>
    <string name="volver">Back</string>
    <string name="desc_img_rules">Descripción imagen de reglas</string>
    <string name="play">Play</string>
    <string name="nivel_puntuacion">Level: %1$s.</string>
    <string name="pista">Hint</string>
    <string name="total_score">Congratulations, you got %1$d droids. You answered %2$d/%3$d questions correctly.</string>
    <string name="exit">Exit</string>
    <string name="proxima">Retry?</string>
    <string name="questions">Questions</string>
    <string name="list_questions">List of questions</string>
    <string name="newQuestion">New</string>
    <string name="guardar">Save</string>
    <string name="new_question">New Question</string>
    <string name="correct_answer">Correct answer:</string>
    <string name="alternative_answers">Alternative answers:</string>
    <string name="second_answer">Second answer</string>
    <string name="third_answer">Third answer</string>
    <string name="fourth_answer">Fourth answer</string>
    <string name="text_hint">Write a Hint:</string>
    <string name="carga_db">DB Initial Load. Retry.</string>
    <string-array name="niveles">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="inserted_question">Question has been inserted satisfactorily.</string>
    <string name="complete_fields">You must complete all the fields.</string>
    <string name="write_hint">Write a hint...</string>
</resources>
